fix payload - need to send along a timestamp